samples/_failures_safe/1761130212_55d903_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7fa85bc4.c: In function ‘main’:
./samples/SAFE/__tmp_7fa85bc4.c:172:16: error: missing terminating " character
  172 |         printf("Type: %-
      |                ^~~~~~~~~
./samples/SAFE/__tmp_7fa85bc4.c:172:9: error: expected expression at end of input
  172 |         printf("Type: %-
      |         ^~~~~~
./samples/SAFE/__tmp_7fa85bc4.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7fa85bc4.c:172:9: error: expected declaration or statement at end of input
